--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
 			<p><b>Tools Used: </b>
 			<ul>
 				<li>Flutter, Flutter Libraries: SQflite, SQlbrite, Rxdart</li>
-				<li>Kubernetes was mainly used in the Pulumi project</li>
-				<li>Limited introduction to AWS</li>
+				<li>Kubernetes, Pulumi SDK</li>
+				<li>Amazon AWS basics</li>
 			</ul>
 			</p>
           </div>
