added thesis as work ex

--- a/index.html
+++ b/index.html
@@ -178,6 +178,38 @@
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
+	
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>November 2021 - Present</p>
+            <div class="h5">TU Darmstadt</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Master Thesis, TU Darmstadt </div>
+            <p>Built an andriod application which enables user to chat with-in a small neighborhood with out any internet connection / Mobile data</p>
+			<p>Intitial research about the related work, Formulating solution and Implementing the formulated solution</p>
+			<p><b>Tools Used: </b>
+			<ul>
+				<li>Flutter</li>
+				<li>Andriod Studio + Flutter SDK </li>
+				<li>Github</li>
+				<li>Google Nearby Connections</li>
+				<li>Flutter Nearby</li>
+				<li>Sqflite</li>
+				<li>Sqlbrite</li>
+				<li>Rxdart</li>
+				<li>Flutter beacon</li>
+			</ul>
+			</p>
+			
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
