Chnaged Summary fixed some typos
changed summary fixed typos and Chnaged the cv

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/sayan.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Sayan Sikdar</div>
-          <p class="category text-white">M.Sc in Distributed Software System, TU DARMSTADT </p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://drive.google.com/file/d/1UBweYxhnU0MsaMeaiMbjxjlZCUOT9Tt-/view?usp=sharing" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">M.Sc in Distributed Software System, TU DARMSTADT </p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://drive.google.com/file/d/1u8mtUQxxEMf0GW8Njy40B_VxuAP9z87P/view?usp=sharing" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
@@ -72,7 +72,9 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Sayan Sikdar. M.Sc student at TU Darmstadt</p>
-            <p>I am a test automation Engineer with solid experience in selenium, docker, jenkins, Soap-UI, Katalon etc. I am willing to explore Devops and software development</p>
+            <p>Experienced test-automation engineer looking for a change in career towards CloudEngineering/ Dev-ops Engineering.</p>
+	    <p>I have worked as full-time QA Automation Engineer and also as a student QA Engineer during my master studies. I would like to apply the knowledge gained from the M.Sc.
+               in Distributed Software Systems in my work-life. Therefore, now I am looking for a role where I can get to work with different cloudbased application.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -190,7 +192,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Master Thesis, TU Darmstadt </div>
-            <p>Built an andriod application which enables user to chat with-in a small neighborhood with out any internet connection / Mobile data</p>
+            <p>Built an andriod application which enables users to chat with-in a small neighborhood with out any internet connection / Mobile data</p>
 			<p>Intitial research about the related work, Formulating solution and Implementing the formulated solution</p>
 			<p><b>Tools Used: </b>
 			<ul>
