commiting directly onmaster

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/sayan.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Sayan Sikdar</div>
-          <p class="category text-white">M.Sc in Distributed Software System, TU DARMSTADT </p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://drive.google.com/file/d/1u8mtUQxxEMf0GW8Njy40B_VxuAP9z87P/view?usp=sharing" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Netowrk & Cloud Enthusiast, Looking for an oppotuity to get certified in CCNP Data Center and learn more about Network Automation </p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://drive.google.com/file/d/1u8mtUQxxEMf0GW8Njy40B_VxuAP9z87P/view?usp=sharing" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
@@ -71,10 +71,11 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Sayan Sikdar. M.Sc student at TU Darmstadt</p>
-            <p>Experienced test-automation engineer looking for a change in career towards Cloud Engineering/ Dev-ops Engineering.</p>
-	    <p>I have worked as full-time QA Automation Engineer and also as a student QA Engineer during my master studies. I would like to apply the knowledge gained from the M.Sc.
-               in Distributed Software Systems in my work-life. Therefore, now I am looking for a role where I can get to work with different cloud based application.</p>
+            <p>Hello! I am Sayan. I am currently working as Dev-ops and cloud consultant in Siticom GmbH, Darmstadt, Germany</p>
+            <p>After spending my early years of my career as a test automation engineer I moved on to Dev-ops role to pursue my natural interest in Computer Networks and large network infrastructure 
+               while staying close to my passion for coding.</p>
+	          <p>I am currently looking for an opportunity which will let me work remotely and let me work from anywhere within EU,
+               Ideally outside EU as well. I am looking for an opportunity to get certified in CCNP Datacenter</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -94,11 +95,11 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">Schwanenstraße 52, Darmstadt, Germany</div>
+              <div class="col-sm-8">Susan Sontag weg 1 , Darmstadt, Germany</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-              <div class="col-sm-8">English, German, Hindi</div>
+              <div class="col-sm-8">English, German, Hindi, Bengali</div>
             </div>
           </div>
         </div>
@@ -113,7 +114,7 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Selenium+java </span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Ansible </span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
               </div>
@@ -152,9 +153,9 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Pulumi (Infrastructure as code)</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">pulumi/ Terraform </span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%;"></div><span class="progress-value">30%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%;"></div><span class="progress-value">50%</span>
               </div>
             </div>
           </div>
@@ -168,6 +169,41 @@
 		    <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Kubernetes</span>
               <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">40%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">Selenium</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">80%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">Python</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">60%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">Jinja2/ Jsonnet templating</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">60%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">Checkpoint provider 1</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">50%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">Amazon web services</span>
+              <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">50%</span>
               </div>
             </div>
@@ -180,6 +216,36 @@
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>November 2021 - Present</p>
+            <div class="h5">TU Darmstadt</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Consultant, Siticom GmbH, Weiterstadt </div>
+            <p> Worked in team of two replace exisiting Firewall devices with virtually provisioned firewalls on VMware , povide private access through aws endpoints etc. </p>
+			<p>Worked along with a colleague to understand the client's requirement to plan and execute solutions</p>
+			<p><b>Tools Used: </b>
+			<ul>
+				<li>Ansible</li>
+				<li>Gitlab CI</li>
+				<li>CheckPoint Provider 1</li>
+				<li>Terraform</li>
+				<li>Python</li>
+				<li>VMware Vsphere</li>
+				<li>LDAP servers</li>
+				<li>Postman</li>
+			</ul>
+			</p>
+			
+          </div>
+        </div>
+      </div>
+    </div>
 	
     <div class="card">
       <div class="row">
