--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>November 2021 - Present</p>
-            <div class="h5">TU Darmstadt</div>
+            <p>July 2022 - Present</p>
+            <div class="h5">Siticom</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -251,7 +251,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>November 2021 - Present</p>
+            <p>November 2021 - March 2022</p>
             <div class="h5">TU Darmstadt</div>
           </div>
         </div>
@@ -282,7 +282,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>June 2019 - Present</p>
+            <p>June 2019 - May 2022</p>
             <div class="h5">Pharmacontrol Electronics</div>
           </div>
         </div>
@@ -466,7 +466,7 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">Schwanenstr 52, Darmstadt, Germany</p>
+                    <p class="pb-2">Susan Sontag weg 1, Darmstadt, Germany</p>
                     <p class="mb-0"><strong>Phone</strong></p>
                     <p class="pb-2">+49-1749053916</p>
                     <p class="mb-0"><strong>Email</strong></p>
