--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2013 - 2015</p>
+            <p>2018 - present</p>
             <div class="h5">Master's Degree</div>
           </div>
         </div>
@@ -398,7 +398,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2009 - 2013</p>
+            <p>2011- 2015</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
