added new resume

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/sayan.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Sayan Sikdar</div>
-          <p class="category text-white">Network & Cloud Enthusiast, Looking for an oppotuity to get certified in CCNP Data Center and learn more about Network Automation </p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://drive.google.com/file/d/1u8mtUQxxEMf0GW8Njy40B_VxuAP9z87P/view?usp=sharing" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Network & Cloud Enthusiast, Looking for an oppotuity to get certified in CCNP Data Center and learn more about Network Automation </p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://drive.google.com/file/d/1A2oQGgG-ZzYVfKZJLoN8QM4j5SZF_NGn/view?usp=drive_link" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
